--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-05-16  David Hampton  <hampton@employees.org>
+
+	* src/gnome/window-main.c: 
+	* src/gnome-utils/gnc-mdi-utils.c:
+	* src/gnome-utils/gnc-mdi-utils.h: Fix the "View xxxbar" menu
+	items to track properly when a new data file is opened. #99598
+	Consolidate the code for manipulating the View/Statusbar and
+	View/Summarybar menu items.  Work around a Gnome MDI bug as best
+	as possible.
+
 2003-05-15  Christian Stimming  <stimming@tuhh.de>
 
 	* po/pt_BR.po: Updated Brazilian portugese translation by Jon
