--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-18  Christian Stimming  <stimming@tuhh.de>
+
+	* po/it.po: Updated complete Italian translation by Lorenzo
+	Cappelletti <lorenzo.cappelletti@email.it>.
+
 2003-05-17  Derek Atkins  <derek@ihtfp.com>
 
 	* src/import-export/qif-import/qif-file.scm:  the numeric test
