2003-05-19  Christian Stimming  <stimming@tuhh.de>
	* po/de.po: Updated German translation.

	* src/gnome-utils/gnc-account-tree.c, src/scm/main-window.scm:
	Patch by Herbert Thoma: adds the the strings that were not
	translated due to the 1.8.3 string freeze.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8330 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-19  Christian Stimming  <stimming@tuhh.de>
+
+	* po/de.po: Updated German translation.
+
+	* src/gnome-utils/gnc-account-tree.c, src/scm/main-window.scm:
+	Patch by Herbert Thoma: adds the the strings that were not
+	translated due to the 1.8.3 string freeze.
+
 2003-05-18  Christian Stimming  <stimming@tuhh.de>
 
 	* po/it.po: Updated complete Italian translation by Lorenzo
