* macros/autogen.sh: comment out intltoolize and libtoolize again
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8332 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-18  Derek Atkins  <derek@ihtfp.com>
+
+	* macros/autogen.sh: comment out intltoolize and libtoolize again
+
 2003-05-17  Jan Arne Petersen  <jpetersen@uni-bonn.de>
 
 	* configure.in: Add Makefile.in to AC_OUTPUT targets.
