Fix for template-transaction [lack-of-]date-related issues in SX creation, including a fix for existing persisted bad data.  Hopeful fix for Bug#102311. Add all languages to configure.in
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8333 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-05-18  Joshua Sled  <jsled@asynchronous.org>
+
+	* src/backend/file/gnc-schedxaction-xml-v2.c (tt_trn_handler): Fix
+	for existing/old data without posted dates.  If we encounter the
+	condition, fixup the transaction's Posted date to that of the
+	Entered date.
+
+	* src/engine/SchedXaction.c (xaccSchedXactionSetTemplateTrans):
+	Fix for creating new template transactions [from Scheduling
+	existing transactions], such that they have valid Posted dates.
+
 2003-05-19  Christian Stimming  <stimming@tuhh.de>
 
 	* po/de.po: Updated German translation.
