--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-18  Derek Atkins  <derek@ihtfp.com>
+
+	* src/engine/gnc-lot.[ch]: add LOT_IS_CLOSED and LOT_BALANCE
+	  query parameter methods
+
 2003-05-18  Joshua Sled  <jsled@asynchronous.org>
 
 	* src/backend/file/gnc-schedxaction-xml-v2.c (tt_trn_handler): Fix
