--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,11 @@
 	* src/gnome-utils/gw-gnome-utils-spec.scm: wrap the new print-session
 	  apis.
 
+	* src/engine/QueryCore.c:
+	* src/engine/guid.c:
+	* src/engine/kvp-util.c:
+	  Fixes for 64-bit architectures.  Fixes bug #113231.
+
 2003-05-18  Derek Atkins  <derek@ihtfp.com>
 
 	* src/engine/gnc-lot.[ch]: add LOT_IS_CLOSED and LOT_BALANCE
