--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-05-20  Derek Atkins  <derek@ihtfp.com>
+
+	* acinclude.m4: modify the AC_GWRAP_CHECK_GUILE() macro to
+	  take an argument, the g-wrap module directory.  Then actually
+	  test that the g-wrap module loads.  This should detect systems
+	  without slib installed.
+	* configure.in: all the new gwrap check macro
+	  Fixes #113218
+	
 2003-05-19  Derek Atkins  <derek@ihtfp.com>
 
 	* src/engine/QueryNew.[ch]: add gncQueryGetBooks() API to return
