* configure.in: remove duplicate intl/Makefile po/Makefile.in
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8353 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-21  Derek Atkins  <derek@ihtfp.com>
+
+	* configure.in: remove duplicate intl/Makefile po/Makefile.in
+
 2003-05-20  Derek Atkins  <derek@ihtfp.com>
 
 	* acinclude.m4: modify the AC_GWRAP_CHECK_GUILE() macro to
