* src/report/standard-reports/advanced-portfolio.scm: 	  Deal properly when there are no prices for a commodity.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8355 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* configure.in: remove duplicate intl/Makefile po/Makefile.in
 
+	* src/report/standard-reports/advanced-portfolio.scm:
+	  Deal properly when there are no prices for a commodity.
+
 2003-05-20  Derek Atkins  <derek@ihtfp.com>
 
 	* acinclude.m4: modify the AC_GWRAP_CHECK_GUILE() macro to
