* src/report/report-gnome/dialog-view-column.c: don't crash 	  if you remove the last entry and then add another one.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8395 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-25  Derek Atkins  <derek@ihtfp.com>
 
+	* src/report/report-gnome/dialog-view-column.c: don't crash
+	  if you remove the last entry and then add another one.	
+
 	* src/business/business-reports/aging.scm:
 	  - Deal with the case where the first transaction found for a
 	    particular company is a payment (it used to just ignore it!
